slurm-45.out
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/Hyperasexamplerun.py", line 70
    model.add(Activation('relu'))
        ^
SyntaxError: invalid syntax
